--- a/form.htm
+++ b/form.htm
@@ -627,6 +627,37 @@
                                         </div>
                                     </div>
                                     <div class="form_grp" role="group" aria-labelledby="fake-legend">
+                                        <label class="form_title">checkbox 2-2 僅可點選框框+文字（HTML架構有異動）</label>
+                                        <div class="form_content" id="fake-legend">
+                                            <div class="check_grp">
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox1-1" checked="">
+                                                    <label for="cbox1-1">全部</label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox1-2">
+                                                    <label for="cbox1-2">展覽</label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox1-3">
+                                                    <label for="cbox1-3">表演與節慶</label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox1-4">
+                                                    <label for="cbox1-4">演講／講座／研討會</label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox1-5">
+                                                    <label for="cbox1-5">綜合</label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox1-6">
+                                                    <label for="cbox1-6">Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Nisi nulla quos eligendi deserunt voluptatem tempora fugiat earum totam quasi in, magni quam possimus. Quasi maxime ratione iure! Beatae, magnam, quos.</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                         <label class="form_title">checkbox 3</label>
                                         <div class="form_content" id="">
                                             <div class="check_grp">
@@ -642,7 +673,7 @@
                                                 <div class="form_content">
                                                     <input type="text" id="" placeholder="請輸入文字">
                                                 </div>
-                                                <label><input type="checkbox" name="" value="">項目4<span>（備註文字）</span></label>
+                                                <label><input type="checkbox" name="" value="">項目4 Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Nisi nulla quos eligendi deserunt voluptatem tempora fugiat earum totam quasi in, magni quam possimus. Quasi maxime ratione iure! Beatae, magnam, quos.<span>（備註文字）</span></label>
                                                 <div class="form_content">
                                                     <select name="" id="">
                                                         <option value="">請選擇</option>
@@ -654,6 +685,66 @@
                                                 <label><input type="checkbox" name="" value="">項目5<span>（備註文字）</span></label>
                                                 <label><input type="checkbox" name="" value="" disabled="">項目5<span>（備註文字）</span></label>
                                                 <label><input type="checkbox" name="" value="" checked="" disabled="">項目5<span>（備註文字）</span></label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp" role="group" aria-labelledby="fake-legend">
+                                        <label class="form_title">checkbox 3-2 僅可點選框框+文字（HTML架構有異動）</label>
+                                        <div class="form_content" id="">
+                                            <div class="check_grp">
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-1" checked="">
+                                                    <label for="cbox2-1">項目1<span>（備註文字）</span></label></div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-2">
+                                                    <label for="cbox2-2">項目2<span>（備註文字）</span></label></div>
+                                                <div class="form_content" id="fake-legend">
+                                                    <div class="radio_grp">
+                                                        <div>
+                                                            <input type="radio" name="sampleRadio12" value="" id="cbox2-3" checked="">
+                                                            <label for="cbox2-3">radio 文字串1</label>
+                                                        </div>
+                                                        <div>
+                                                            <input type="radio" name="sampleRadio12" value="" id="cbox2-4">
+                                                            <label for="cbox2-4">radio 文字串2</label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-5">
+                                                    <label for="cbox2-5">項目3<span>（備註文字）</span></label>
+                                                </div>
+                                                <div class="form_content">
+                                                    <input type="text" id="" placeholder="請輸入文字">
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-6">
+                                                    <label for="cbox2-6">項目4<span>（備註文字）</span></label>
+                                                </div>
+                                                <div class="form_content">
+                                                    <select name="" id="">
+                                                        <option value="">請選擇</option>
+                                                        <option value="">項目1</option>
+                                                        <option value="">項目2</option>
+                                                        <option value="">項目3</option>
+                                                    </select>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-7">
+                                                    <label for="cbox2-7">項目5<span>（備註文字）</span></label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-8" disabled="">
+                                                    <label for="cbox2-8">項目5<span>（備註文字）</span></label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-9" checked="" disabled="">
+                                                    <label for="cbox2-9">項目5<span>（備註文字）</span></label>
+                                                </div>
+                                                <div>
+                                                    <input type="checkbox" name="" value="" id="cbox2-10">
+                                                    <label for="cbox2-10">Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Nisi nulla quos eligendi deserunt voluptatem tempora fugiat earum totam quasi in, magni quam possimus. Quasi maxime ratione iure! Beatae, magnam, quos.<span>（備註文字）</span></label>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
