--- a/404.htm
+++ b/404.htm
@@ -5,30 +5,132 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404!抱歉!找不到您的頁面！</title>
+    <title>抱歉!找不到您的頁面！</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
-<style>
-    *{padding:0;margin:0;box-sizing:border-box}body{background:#3099d0;color:#FFF}.wrapper{width:100%;max-width:800px;margin:0px auto;padding:1em}.wrapper h1{font-size:10em;display:block;float:left;width:50%;text-align:right;margin:0 30px 15px 0;font-family:sans-serif}.wrapper h2{overflow:hidden;font-size:2em;padding-top:2em}.wrapper .error{clear:both;text-align:center}.wrapper .error h3{margin-bottom:1em}.wrapper .error h3 small{display:block}.btn_grp{clear:both;margin:2em 0;text-align:center}.btn_grp a{display:inline-block;border-radius:5px;padding:.5em 1.3em;margin:0 1em 1em;min-width:10em;color:#FFF;text-align:center;border:1px solid #FFF;text-decoration:none;transition:.3s ease-out}.btn_grp a:hover,.btn_grp a:focus{background:rgba(0,0,0,.2);box-shadow:none;outline:none}@media screen and (max-width:767px){.wrapper h1{float:none;margin:10px 0 5px;line-height:1;text-align:center;width:100%;font-size:8em}.wrapper h2{clear:both;text-align:center;margin:0;padding:0}.wrapper .error{margin-top:1em}}</style>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: arial, sans-serif;
+        }
+
+        body {
+            background: url(images/body404_bg.jpg) no-repeat 0% -120px #fff;
+            color: #1d90ac;
+            display: flex;
+            height: 100vh;
+            align-items: center;
+        }
+
+        .wrapper {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0px auto;
+            padding: 1em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .wrapper > img { width: 55%; }
+        @media screen and (max-width: 940px) {
+            .wrapper {
+                flex-direction: column-reverse;
+            }
+        }
+        .title { display: flex; }
+        .wrapper h2 {
+            overflow: hidden;
+            font-size: 3.5em;
+        }
+        @media screen and (max-width: 768px) {
+            .title {
+              flex-flow: column;
+              text-align: center;
+            }
+            .title h1 { ine-height: 1em; }
+            .title h2 { padding: 0 0 1.5em 0; }
+        }
+
+        @media screen and (max-width: 768px) {
+            .wrapper .error {
+                text-align: center;
+            }
+        }
+        .wrapper .error h3 { margin: 1em 0; }
+
+        .wrapper .error h3 small { display: block; }
+        .btn_grp a {
+            display: inline-block;
+            border-radius: 5px;
+            padding: 0.5em 1.3em;
+            margin: 0 1em 1em;
+            min-width: 10em;
+            text-align: center;
+            color: #1d90ac;
+            border: 1px solid #1d90ac;
+            text-decoration: none;
+            transition: 0.3s ease-out;
+        }
+
+        .btn_grp a:hover,
+        .btn_grp a:focus {
+            background: rgba(29, 144, 172, 0.2);
+            box-shadow: none;
+            outline: none;
+        }
+
+        @media screen and (max-width: 767px) {
+            .wrapper h1 {
+                float: none;
+                margin: 10px 0 5px;
+                line-height: 1;
+                text-align: center;
+                width: 100%;
+                font-size: 8em;
+            }
+
+            .wrapper h2 {
+                clear: both;
+                text-align: center;
+                margin: 0;
+                padding: 0;
+            }
+
+            .wrapper .error { margin-top: 2em; }
+        }
+
+        @media screen and (max-width: 422px) {
+            .btn_grp { text-align: center; }
+        }
+    </style>
 </head>
 <body>
     <div class="wrapper">
-        <h1>404</h1>
-        <h2>抱歉！<br>找不到您的頁面！</h2>
-        <div class="error">
-            <h3>您瀏覽的網頁不存在,請再重新檢視 <small>The page you're visiting does not exit, please click.</small>
-            </h3>
-            <h3>將在<span>2</span>秒後自動跳轉到首頁 <small>be redirected to homepage automatically in <span>2</span> seconds.</small>
-            </h3>
+        <div class="">
+            <div class="title">
+                <h2>抱歉！<br>找不到您的頁面！</h2>
+            </div>
+            <div class="error">
+                <h3>您瀏覽的網頁不存在,請再重新檢視<br>將在<span>2</span>秒後自動跳轉到首頁</h3>
+                <h3>
+                    <small>The page you're visiting does not exit, please click.</small>
+                    <small>be redirected to homepage automatically in
+                    <span>2</span> seconds.</small>
+                </h3>
+            </div>
+            <div class="btn_grp">
+                <a href="javascript:history.back()" class="btn">回上一頁</a>
+                <a href="#" class="btn">回首頁</a>
+            </div>
         </div>
-        <div class="btn_grp">
-            <a href="javascript:history.back()" class="btn">回上一頁</a>
-            <a href="#" class="btn">回首頁</a>
-        </div>
+        <img src="images/404_img.svg" alt="">
     </div>
 </body>
 
