2022-0718 新增資訊跳窗

--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>登入頁 - 旅行社</td>
+                        <td>登入頁 - 旅行社（資訊跳窗更新在此）</td>
                         <td><a href="login.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
