--- a/login.htm
+++ b/login.htm
@@ -20,6 +20,29 @@
 </head>
 
 <body class="Login">
+
+    <!-- 讀卡檢測中 -->
+    <div class="infoBox">
+        <div class="content">
+            <!-- 樣式１：讀卡檢測中 -->
+            <!-- loading -->
+            <div class="loading">
+                <div></div>
+                <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                   <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+                </svg>
+            </div>
+            <p>讀卡程式檢測中<br>（請確認CGServiSign程式已啟動）</p>
+
+            <!-- 樣式2：讀卡無回應 -->
+            <!-- <p>讀卡程式沒有回應，是否下載<br>CGServiSign安裝程式？</p>
+            <div class="btn_grp">
+                <button type="button" class="btn btn-primary">前往下載</button>
+                <button type="button" class="btn btn-secondary">自行檢查安裝及啟動程式</button>
+            </div> -->
+        </div>
+    </div>
+
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
