--- a/login.htm
+++ b/login.htm
@@ -27,10 +27,7 @@
             <!-- 樣式１：讀卡檢測中 -->
             <!-- loading -->
             <div class="loading">
-                <div></div>
-                <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-                   <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
-                </svg>
+                <img src="images/Rolling-1s-100px.gif" alt="">
             </div>
             <p>讀卡程式檢測中<br>（請確認CGServiSign程式已啟動）</p>
 
