2022-1007 foto-adjust 新增示意圖

--- a/form.htm
+++ b/form.htm
@@ -35,7 +35,9 @@
             <ul>
                 <li>無序清單</li>
                 <li>項目1</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem corrupti dolorum iure magni quia <a href="#">ratione cupiditate</a> fugit molestias perspiciatis quaerat a sequi modi qui consequuntur atque praesentium, odit quibusdam. Ab.</li>
                 <li><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem corrupti dolorum iure magni quia ratione cupiditate fugit molestias perspiciatis quaerat a sequi modi qui consequuntur atque praesentium, odit quibusdam. Ab.</a></li>
+
             </ul>
 
             <div class="flex-form">
