--- a/foto-adjust.htm
+++ b/foto-adjust.htm
@@ -95,10 +95,24 @@
                             </div>
                             <!-- 照片調整-->
                             <div class="foto-adjust">
-                                <h3>請將人像縮放或移動符合標記範圍</h3>
-                                <div style="text-align: center;">
-                                    <img src="images/sample-foto-adjust.jpg" alt="" >
+                                <!-- <h3>請將人像縮放或移動符合標記範圍</h3> -->
+                                <h3 class="subtitle"><span>請將人像縮放或移動符合標記範圍</span></h3>
+
+                                <!-- 大頭照＋示意圖 -->
+                                <div class="flex">
+                                    <!-- 工程師下的id -->
+                                    <div id="croppie">
+                                        <img src="images/sample-foto-adjust2.jpg" alt="" >
+                                        <h3 class="R">請左右拖曳照片下方的調整軸，同比例放大或縮小照片，也可點選照片拖拉移動，使頭像符合紅色尺規（內圈為 3.2 公分，外圈為 3.6 公分）。</h3>
+                                    </div>
+                                    <!-- 示意圖 -->
+                                    <div class="demo_MugShot">
+                                        <img src="images/demo.jpg" alt="">
+                                        <b>示意圖</b>
+                                    </div> 
                                 </div>
+
+
                                 <div class="btn_grp">
                                     <button class="btn btn-reset">重新上傳</button>
                                     <button class="btn btn-submit">下一步</button>
