2022-1109 修改ID #croppie 改成 #croppieWNote

--- a/foto-adjust.htm
+++ b/foto-adjust.htm
@@ -42,10 +42,13 @@
                 </nav>
                 <!-- navigation End -->
                 <h1>
-                    <a href="index.htm"><img src="images/logo.png" alt="外交部領事事務局護照預約申請" /><span>旅行社團件<b>申辦護照系統</b></span></a>
+                    <a href="index.htm"><img src="images/logo.png"
+                            alt="外交部領事事務局護照預約申請" /><span>旅行社團件<b>申辦護照系統</b></span></a>
                 </h1>
                 <!-- noscript -->
-                <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+ (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←) 快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
+                <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+
+                    (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←)
+                    快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
                 </noscript>
                 <!-- menu Start -->
                 <nav class="menu" role="navigation" aria-label="About page">
@@ -101,15 +104,16 @@
                                 <!-- 大頭照＋示意圖 -->
                                 <div class="flex">
                                     <!-- 工程師下的id -->
-                                    <div id="croppie">
-                                        <img src="images/sample-foto-adjust2.jpg" alt="" >
-                                        <h3 class="R">請左右拖曳照片下方的調整軸，同比例放大或縮小照片，也可點選照片拖拉移動，使頭像符合紅色尺規（內圈為 3.2 公分，外圈為 3.6 公分）。</h3>
+                                    <div id="croppieWNote">
+                                        <img src="images/sample-foto-adjust2.jpg" alt="">
+                                        <h3 class="R">請左右拖曳照片下方的調整軸，同比例放大或縮小照片，也可點選照片拖拉移動，使頭像符合紅色尺規（內圈為 3.2 公分，外圈為 3.6
+                                            公分）。</h3>
                                     </div>
                                     <!-- 示意圖 -->
                                     <div class="demo_MugShot">
                                         <img src="images/demo.jpg" alt="">
                                         <b>示意圖</b>
-                                    </div> 
+                                    </div>
                                 </div>
 
 
@@ -136,8 +140,12 @@
                     <p class="Copyright"> Hyweb Technology Co., Ltd.© 2015 All Rights Reserved</p>
                     <p> 本局地址：100219 臺北市濟南路1段2之2號3~5樓(中央聯合辦公大樓北棟)<br />
                         總機電話：(02)2343-2888<br />
-                        服務時間：申請護照、簽證及文件證明櫃檯受理時間為週一至週五 上午08：30 — 下午17：00 <span>中午不休息，另申辦護照櫃檯每週三延長辦公時間至20:00止，惟倘遇天災或停電等不可預期情況，本局得視狀況調整(或暫停)受理時間</span><br />
-                        聯絡我們：<a href="#" target="_blank">台北局本部</a><a href="#" target="_blank">中部辦事處</a><a href="#" target="_blank">雲嘉南辦事處</a><a href="#" target="_blank">南部辦事處</a><a href="#" target="_blank">東部辦事處</a><a href="#" target="_blank">旅外求助管道</a><a href="#" target="_blank">桃園機場辦事處</a>
+                        服務時間：申請護照、簽證及文件證明櫃檯受理時間為週一至週五 上午08：30 — 下午17：00
+                        <span>中午不休息，另申辦護照櫃檯每週三延長辦公時間至20:00止，惟倘遇天災或停電等不可預期情況，本局得視狀況調整(或暫停)受理時間</span><br />
+                        聯絡我們：<a href="#" target="_blank">台北局本部</a><a href="#" target="_blank">中部辦事處</a><a href="#"
+                            target="_blank">雲嘉南辦事處</a><a href="#" target="_blank">南部辦事處</a><a href="#"
+                            target="_blank">東部辦事處</a><a href="#" target="_blank">旅外求助管道</a><a href="#"
+                            target="_blank">桃園機場辦事處</a>
                     </p>
                     <span class="counter">訪客人次：<em>39213358</em></span>
                 </div>
