個人預約 login 新增說明事項，說明事項背景色修改

--- a/p_login.htm
+++ b/p_login.htm
@@ -64,7 +64,17 @@
                         <div class="pin_panel">
                             <button type="button" class="btn btn-submit">我要申辦護照</button>
                         </div>
+                        <!-- 說明事項 -->
+                        <div class="tips">
+                            <h3 class="tips_title"><span>說明事項</span></h3>
+                            <ol>
+                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">HiCOS卡片管理工具</a>（Windows）或<a href="#" target="_blank">跨平台網頁讀卡元件</a>（macOS），才能使用憑證登入。</li>
+                                <li><a href="#" target="_blank">檢視目前已安裝版本及IC卡自我檢測</a>，如出現連線錯誤訊息，請確認憑證元件服務是否已啟動，若使用讀卡元件發生問題，請解除安裝現有版本，重開機後，下載最新版讀卡元件。</li>
+                                <li><a href="#">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
+                            </ol>
+                        </div>
                     </div>
+                    
                 </div>
             </section>
         </div>
