--- a/login.htm
+++ b/login.htm
@@ -169,6 +169,18 @@
                                                 </div>
                                             </div>
                                         </form>
+                                        <!-- 說明事項 -->
+                                        <div class="tips">
+                                            <h3 class="tips_title"><span>說明事項</span></h3>
+                                            <ol>
+                                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
+                                                <li>系統環境設定完成，請將您的自然人憑證插入讀卡機後，輸入憑證PIN碼進行登入。</li>
+                                            </ol>
+                                            <!-- <h3 class="tips_title"><span>移民署宣導事項</span></h3>
+                                            <ol>
+                                                <li><a href="#" target="_blank">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
+                                            </ol> -->
+                                        </div>
                                     </div>
                                 </div>
                                 <h2 class="tabItem"><a href="#">行動自然人憑證（免插卡驗證）</a></h2>
@@ -179,7 +191,7 @@
                                         <form action="">
                                             <div class="flex-form form_inline">
                                                 <div class="form_grp">
-                                                    <label for="username" class="form_title"><span>步驟ㄧ</span>輸入身分證字號</label>
+                                                    <label for="username" class="form_title">輸入身分證字號</label>
                                                     <div class="form_content">
                                                         <input name="username" type="text" placeholder="請輸入身分證字號">
                                                     </div>
@@ -190,22 +202,36 @@
                                             </div>
                                             <div class="flex-form w100">
                                                 <div class="form_grp">
-                                                    <label for="username" class="form_title"><span>步驟二</span>請掃描 / 點擊您的行動自然人憑證驗證QRcode</label>
+                                                    <label for="username" class="form_title">請掃描 / 點擊您的行動自然人憑證驗證QRcode</label>
                                                     <div class="qrcode">
                                                         <div class="img-container"><img src="images/QRcode.png" class="contain" alt="外交部領事事務局護照預約申請"></div>
                                                         <div class="btn_grp">
+                                                            <b>驗證QRcode有效時間：04:59</b>
+                                                            <button class="btn btn-normal">取消驗證</button>
                                                             <button class="btn btn-normal">重新產生QRcode</button>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </form>
+                                        <!-- 說明事項 -->
+                                        <div class="tips">
+                                            <!-- <h3 class="tips_title"><span>說明事項</span></h3>
+                                            <ol>
+                                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
+                                                <li>系統環境設定完成，請將您的自然人憑證插入讀卡機後，輸入憑證PIN碼進行登入。</li>
+                                            </ol> -->
+                                            <h3 class="tips_title"><span>移民署宣導事項</span></h3>
+                                            <ol>
+                                                <li><a href="#" target="_blank">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
+                                            </ol>
+                                        </div>
                                     </div>
                                 </div>
                             </section>
                         </div>
                         <!-- 說明事項 -->
-                        <div class="tips">
+                        <!-- <div class="tips">
                             <h3 class="tips_title"><span>說明事項</span></h3>
                             <ol>
                                 <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
@@ -215,7 +241,7 @@
                             <ol>
                                 <li><a href="#" target="_blank">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
                             </ol>
-                        </div>
+                        </div> -->
                     </div>
                     </div>
                 </div>
