--- a/login.htm
+++ b/login.htm
@@ -149,41 +149,8 @@
                         <div class="tabSet">
                             <b>請選擇驗證方式：</b>
                             <section class="tabs verify">
-                                <h2 class="tabItem active"><a href="#">自然人憑證（插卡驗證）</a></h2>
                                 <!--選到的頁籤項目-->
-                                <div class="tabContent">
-                                    <!-- 自然人憑證 -->
-                                    <!-- 憑證PIN碼 -->
-                                    <div class="pin_panel">
-                                        <form action="">
-                                            <div class="flex-form form_inline">
-                                                <div class="form_grp">
-                                                    <label for="username" class="form_title">憑證PIN碼</label>
-                                                    <div class="form_content">
-                                                        <input name="username" type="text" placeholder="請輸入憑證PIN碼">
-                                                    </div>
-                                                </div>
-                                                <div class="btn_grp">
-                                                    <!-- <input name="" type="reset" value="清除" class="btn btn-reset"> -->
-                                                    <input name="" type="submit" value="登入" class="btn btn-submit">
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <!-- 說明事項 -->
-                                        <div class="tips">
-                                            <h3 class="tips_title"><span>說明事項</span></h3>
-                                            <ol>
-                                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
-                                                <li>系統環境設定完成，請將您的自然人憑證插入讀卡機後，輸入憑證PIN碼進行登入。</li>
-                                            </ol>
-                                            <!-- <h3 class="tips_title"><span>移民署宣導事項</span></h3>
-                                            <ol>
-                                                <li><a href="#" target="_blank">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
-                                            </ol> -->
-                                        </div>
-                                    </div>
-                                </div>
-                                <h2 class="tabItem"><a href="#">行動自然人憑證（免插卡驗證）</a></h2>
+                                <h2 class="tabItem active"><a href="#">行動自然人憑證（免插卡驗證）</a></h2>
                                 <div class="tabContent">
                                     <!-- 行動自然人憑證 -->
                                     <!-- 憑證PIN碼 -->
@@ -228,20 +195,41 @@
                                         </div>
                                     </div>
                                 </div>
+                                <h2 class="tabItem"><a href="#">自然人憑證（插卡驗證）</a></h2>
+                                <div class="tabContent">
+                                    <!-- 自然人憑證 -->
+                                    <!-- 憑證PIN碼 -->
+                                    <div class="pin_panel">
+                                        <form action="">
+                                            <div class="flex-form form_inline">
+                                                <div class="form_grp">
+                                                    <label for="username" class="form_title">憑證PIN碼</label>
+                                                    <div class="form_content">
+                                                        <input name="username" type="text" placeholder="請輸入憑證PIN碼">
+                                                    </div>
+                                                </div>
+                                                <div class="btn_grp">
+                                                    <!-- <input name="" type="reset" value="清除" class="btn btn-reset"> -->
+                                                    <input name="" type="submit" value="登入" class="btn btn-submit">
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <!-- 說明事項 -->
+                                        <div class="tips">
+                                            <h3 class="tips_title"><span>說明事項</span></h3>
+                                            <ol>
+                                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
+                                                <li>系統環境設定完成，請將您的自然人憑證插入讀卡機後，輸入憑證PIN碼進行登入。</li>
+                                            </ol>
+                                            <!-- <h3 class="tips_title"><span>移民署宣導事項</span></h3>
+                                            <ol>
+                                                <li><a href="#" target="_blank">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
+                                            </ol> -->
+                                        </div>
+                                    </div>
+                                </div>
                             </section>
                         </div>
-                        <!-- 說明事項 -->
-                        <!-- <div class="tips">
-                            <h3 class="tips_title"><span>說明事項</span></h3>
-                            <ol>
-                                <li>初次使用自然人憑證登入，請先安裝<a href="#" target="_blank">CGServiSign(環境自我檢測)</a>，才能使用憑證登入</li>
-                                <li>系統環境設定完成，請將您的自然人憑證插入讀卡機後，輸入憑證PIN碼進行登入。</li>
-                            </ol>
-                            <h3 class="tips_title"><span>移民署宣導事項</span></h3>
-                            <ol>
-                                <li><a href="#" target="_blank">年滿12歲以上有戶籍國民申請中華民國晶片護照者，即可至內政部移民署自動查驗通關系統(e-Gate)閘道註冊及使用入出境。</a></li>
-                            </ol>
-                        </div> -->
                     </div>
                     </div>
                 </div>
