2023-0724 旅行社團件身分證字號加隱藏、顯示按鈕

--- a/login.htm
+++ b/login.htm
@@ -159,8 +159,12 @@
                                             <div class="flex-form form_inline">
                                                 <div class="form_grp">
                                                     <label for="username" class="form_title">輸入身分證字號</label>
-                                                    <div class="form_content">
+                                                    <!-- <div class="form_content">
                                                         <input name="username" type="text" placeholder="請輸入身分證字號">
+                                                    </div> -->
+                                                    <div class="form_content labelEffect password_toggle">
+                                                        <input name="password" type="password" placeholder="請輸入身分證字號" value="1234">
+                                                        <button type="button" class="btn btn-icon"><i class="i_hide"></i></button>
                                                     </div>
                                                 </div>
                                                 <div class="btn_grp">
